Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.2
-
None
-
Visual Studio 2010, Boost 1.53, OpenSSL 1.0.1b, libevent 2.0.22
Description
Attempted to build libthriftnb and got a build failure:
1>------ Build started: Project: libthriftnb, Configuration: Debug Win32 ------ 1> TNonblockingServer.cpp 1>c:\users\jim\workspace\thrift\lib\cpp\src\thrift\server\tnonblockingserver.cpp(1110): error C2664: 'getsockname' : cannot convert parameter 3 from 'unsigned int *' to 'int *' 1> Types pointed to are unrelated; conversion requires reinterpret_cast, C-style cast or function-style cast 1> TEvhttpServer.cpp 1> TEvhttpClientChannel.cpp 1> Generating Code... ========== Build: 0 succeeded, 1 failed, 0 up-to-date, 0 skipped ==========
The type for the size should be changed to "socklen_t", it is declared as "unsigned int". TSocket uses this as well, and it works across platforms.