THRIFT-3105 fix TNonBlockingServer build for libthriftnb library on windows